--- a/src/lib/styles/_base.scss
+++ b/src/lib/styles/_base.scss
@@ -40,3 +40,29 @@ ul:last-child {
 strong {
     font-weight: bold;
 }
+a > h1 {
+    transition: color 100ms ease-in-out;
+}
+a:link > h1, a:visited > h1 {
+    color: var(--primary-25);
+}
+a:hover > h1 {
+    color: var(--blue-75);
+}
+a:active > h1 {
+    color: var(--blue-25);
+}
+
+ a:link {
+    text-decoration: none;
+    color: var(--blue-50);
+  }
+  a:visited {
+    color: var(--lilac-50);
+  }
+  a:hover {
+    color: var(--blue-75);
+  }
+  a:active {
+    color: var(--blue-25);
+  } 
