--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -3,4 +3,23 @@
   // Base size = font-size-16 = 1rem = 16px;
   @include helper-loop(10, 36, 2, 'font-size', 'font-size', 'rem', 0.625, 0.125);
   @include helper-loop(11, 17, 2, 'font-size', 'font-size', 'rem', 0.6875, 0.125);
+
+  /* Align */
+  .text-start {
+    text-align: start;
+  }
+  .text-center {
+    text-align: center;
+  }
+  .text-end {
+    text-align: end;
+  }
+
+  /* Font Weight */
+  .font-weight-bold {
+    font-weight: bold;
+  }
+  .font-weight-normal {
+    font-weight: normal;
+  }
   
