Color Palette and Signup Redesign Stuff

--- a/src/lib/styles/mixins/_color.scss
+++ b/src/lib/styles/mixins/_color.scss
@@ -1,3 +1,4 @@
+/* A good chunk of this is based on https://www.kevinpowell.co/article/using-my-colors/ */
 
 //  Create shades of each color and return values as map
 @function color-map($color, $values) {
