--- a/src/lib/styles/_base.scss
+++ b/src/lib/styles/_base.scss
@@ -1,7 +1,9 @@
-html, body {
+html,
+body {
     height: 100%;
     min-height: 100vh;
 }
+
 body {
     font-family: 'Cantarell', 'Courier New', Courier, monospace;
     background-color: var(--white);
@@ -11,11 +13,18 @@ body {
 h1 {
     font-size: var(--font-size-36);
 }
+
 h2 {
     font-size: var(--font-size-24);
 }
+
 h3 {
     font-size: var(--font-size-18);
+}
+
+h4 {
+    font-size: var(--font-size-22);
+    color: var(--black-25)
 }
 
 h1,
@@ -27,42 +36,45 @@ h6 {
     font-family: 'Fjalla One', 'Courier New', Courier, monospace;
 }
 
-p,
+article h4 {margin: 3rem 0 2rem;}
+
+ol,
 ul {
+    margin-left: 3rem;
+}
+
+p,
+ul,
+ol {
     margin-bottom: 1rem;
 }
 
 p:last-child,
-ul:last-child {
+ul:last-child,
+ol:last-child {
     margin-bottom: 0;
 }
 
 strong {
     font-weight: bold;
 }
-a > h1 {
-    transition: color 100ms ease-in-out;
-}
-a:link > h1, a:visited > h1 {
-    color: var(--primary-25);
-}
-a:hover > h1 {
-    color: var(--blue-75);
-}
-a:active > h1 {
-    color: var(--blue-25);
-}
 
- a:link {
+a:link {
     text-decoration: none;
     color: var(--blue-50);
-  }
-  a:visited {
+}
+
+a:visited {
     color: var(--lilac-50);
-  }
-  a:hover {
+}
+
+a:hover {
     color: var(--blue-75);
-  }
-  a:active {
+}
+
+a:active {
     color: var(--blue-25);
-  } 
+}
+pre {
+    margin-bottom: 1.5em!important;
+}
