Article thumbnails for planned articles

--- a/src/lib/styles/_base.scss
+++ b/src/lib/styles/_base.scss
@@ -76,5 +76,6 @@ a:active {
     color: var(--blue-25);
 }
 pre {
+    font-size: var(--font-size-13)!important;
     margin-bottom: 1.5em!important;
 }
